--- a/mysite/stock/static/stock.css
+++ b/mysite/stock/static/stock.css
@@ -1,3 +1,17 @@
 h1 {
     text-align: center;    
 }
+.company_list{
+    max-width: 800px;
+    max-height: 600px;
+    margin-left: auto;
+    margin-right: auto;
+}
+.one_company{
+    display: table;
+    table-layout: fixed;
+    width: 100%;
+}
+.code, .company {
+    display: table-cell;
+}
