--- a/mysite/stock/static/stock.css
+++ b/mysite/stock/static/stock.css
@@ -1,16 +1,33 @@
 h1 {
     text-align: center;    
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+.today_date{
+    text-align: right;
 }
 .company_list{
     max-width: 800px;
     max-height: 600px;
     margin-left: auto;
     margin-right: auto;
+    border: 2px solid;
+    border-color: black;
+    border-collapse: collapse;
 }
-.one_company{
+.col_name{
+    font-weight: bold;
+}
+.col_name, .one_company{
     display: table;
     table-layout: fixed;
     width: 100%;
+    border: 1px dotted;
+    border-color: darkgray;
+    text-align: center;
+}
+th, td{
+    border: 1px dotted;
+    border-color: darkgray;
 }
 .code, .company {
     display: table-cell;
