--- a/mysite/stock/static/stock.css
+++ b/mysite/stock/static/stock.css
@@ -1,9 +1,17 @@
 h1 {
     text-align: center;    
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: green;
+    color: white;
+    padding:0%;
+    margin: 0%;
 }
 .today_date{
     text-align: right;
+    background-color: green;
+    color: white;
+    padding:0%;
+    margin: 0%;
 }
 .company_list{
     max-width: 800px;
@@ -31,4 +39,12 @@ th, td{
 }
 .code, .company {
     display: table-cell;
+}
+.site{
+    text-align: right;
+}
+.madeby{
+    text-align: center;
+    font-family: 'Times New Roman', Times, serif;
+    font-style: italic;
 }
