--- a/mysite/stock/static/stock.css
+++ b/mysite/stock/static/stock.css
@@ -1,20 +1,20 @@
 h1 {
     text-align: center;    
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: green;
+    background-color: #2DB400;
     color: white;
     padding:0%;
     margin: 0%;
 }
 .today_date{
     text-align: right;
-    background-color: green;
+    background-color: #2DB400;
     color: white;
     padding:0%;
     margin: 0%;
 }
 .company_list{
-    max-width: 800px;
+    max-width: auto;
     max-height: 600px;
     margin-left: auto;
     margin-right: auto;
