--- a/mysite/templates/stock/index.html
+++ b/mysite/templates/stock/index.html
@@ -58,6 +58,7 @@
     <a href="https://finance.naver.com/">주식 사이트</a>
   </div>
   <div class="madeby">
+    made by.
     <a href="https://github.com/heewon916/2022_Django_Project">Heewon Kim</a>
   </div>
   {% endblock%}
