modifying stock.css; but not applied in real...what's the problem

--- a/mysite/templates/stock/index.html
+++ b/mysite/templates/stock/index.html
@@ -8,7 +8,7 @@
   <link rel ="stylesheet" href = "{% static 'stock.css'%}">
 
 </head>
-<body>
+<body class="main">
   <!--
   <script type="text/javascript">
     var target = document.getElementById("today_date");
