--- a/mysite/stock/static/stock.css
+++ b/mysite/stock/static/stock.css
@@ -1,3 +1,6 @@
+.main{
+    font-family: 바탕체;
+}
 h1 {
     text-align: center;    
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -18,25 +21,38 @@ h1 {
     max-height: 600px;
     margin-left: auto;
     margin-right: auto;
-    border: 2px solid;
-    border-color: black;
+    /*border: 2px solid;
+    border-color: black;*/
     border-collapse: collapse;
+    border-spacing: 1px;
+    border-top: 1px solid #ccc;
+
 }
 .col_name{
     font-weight: bold;
+    padding: 10px;
+    vertical-align: top;
+    border-bottom: 1px solid #ccc;
 }
 .col_name, .one_company{
     display: table;
     table-layout: fixed;
     width: 100%;
+    /*
     border: 1px dotted;
     border-color: darkgray;
+    */
+    padding: 10px;
+    vertical-align: top;
+    border-bottom: 1px solid #ccc;
     text-align: center;
 }
+/*
 th, td{
     border: 1px dotted;
     border-color: darkgray;
 }
+*/
 .code, .company {
     display: table-cell;
 }
