--- a/mysite/stock/static/stock.css
+++ b/mysite/stock/static/stock.css
@@ -1,9 +1,9 @@
 .main{
-    font-family: 바탕체;
+    font-family: 함초롬돋움, 맑은 고딕;
 }
 h1 {
     text-align: center;    
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2DB400;
     color: white;
     padding:0%;
@@ -13,36 +13,36 @@ h1 {
     text-align: right;
     background-color: #2DB400;
     color: white;
-    padding:0%;
+    padding:7px;
     margin: 0%;
 }
 .company_list{
     max-width: auto;
-    max-height: 600px;
+    max-height: auto;
     margin-left: auto;
     margin-right: auto;
     /*border: 2px solid;
     border-color: black;*/
     border-collapse: collapse;
-    border-spacing: 1px;
     border-top: 1px solid #ccc;
 
 }
 .col_name{
     font-weight: bold;
-    padding: 10px;
-    vertical-align: top;
+    padding: 20px;
+    vertical-align:middle;
     border-bottom: 1px solid #ccc;
 }
 .col_name, .one_company{
     display: table;
     table-layout: fixed;
     width: 100%;
+    height:30px;
     /*
     border: 1px dotted;
     border-color: darkgray;
     */
-    padding: 10px;
+    padding: 30px;
     vertical-align: top;
     border-bottom: 1px solid #ccc;
     text-align: center;
